--- a/index.html
+++ b/index.html
@@ -37,14 +37,23 @@
       rel="stylesheet"
     />
   </head>
-  <body style="background-color: rgb(34, 34, 34)">
+  <body style="background-color: black">
     <!-- -------------------------------------------- -->
     <div class="hero theme-dark">
       <div class="hero-title">
         <div class="type-writer mb-3">
-          <h1>guten tag.</h1>
+          <!-- typing  -->
+          <div class="static-txt">
+            <ul class="dynamic-txts">
+              <li><span>hi.</span></li>
+              <li><span>नमस्ते.</span></li>
+              <li><span>guten tag.</span></li>
+              <li><span>bonjour.</span></li>
+            </ul>
+          </div>
+          <!-- typing  -->          
         </div>
-        <h1>I'm<br />sakshi tiwari.👋</h1>
+        <h1>I'm<br/>sakshi tiwari.👋</h1>
       </div>
       <div class="intro-para mb-3 mt-2">
         <p>
@@ -203,13 +212,13 @@
             </div>
           </div>
           
-          <div class="footer-mesg">
+          <div class="footer-mesg mb-4">
             <span>Built with ❤️ by Sakshi Tiwari</span>
           </div>
         </div>
     </div>
     <!-- -------------------------------------------- -->
-    <script src="index.js">
+    <script src="index1.js">
     </script>
   </body>
 </html>
