--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sakshi.👩‍💻</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="notification.css" />
     <!-- botstrap link  -->
     <!-- Latest compiled and minified CSS -->
     <link
@@ -39,17 +40,13 @@
   </head>
   <body style="background-color: black">
     <!-- -------------------------------------------- -->
+   <div class="entire-container">
     <div class="hero theme-dark">
       <div class="hero-title">
         <div class="type-writer mb-3">
           <!-- typing  -->
-          <div class="static-txt">
-            <ul class="dynamic-txts">
-              <li><span>hi.</span></li>
-              <li><span>नमस्ते.</span></li>
-              <li><span>guten tag.</span></li>
-              <li><span>bonjour.</span></li>
-            </ul>
+          <div class="container">
+            <span class="text sec-text">hi.</span>
           </div>
           <!-- typing  -->          
         </div>
@@ -68,7 +65,7 @@
     </div>
 
     <!-- -------------------------------------------- -->
-    <div class="info-content">
+    <div class=" container info-content">
       <div class="portfolio-root container">
         <div class="portfolio-elem-1 ps portfolio-elem-wrapper ">
           <div class="portfolio-elem theme-dark">
@@ -188,7 +185,7 @@
     </div>
     
     <!-- -------------------------------------------- -->
-    <div class="footer-root theme-dark w-75">
+    <div class=" container footer-root theme-dark w-75">
       <div class="social-row d-flex justify-content-center p-md-3 flex-fill">
         <div class="social-elem linkedln">
         <a href="https://www.linkedin.com/in/sakshi-tiwari-225933220/">  <i class="fa-brands fa-linkedin" aria-hidden="true"></i></a>
@@ -217,6 +214,7 @@
           </div>
         </div>
     </div>
+  </div>
     <!-- -------------------------------------------- -->
     <script src="index1.js">
     </script>
