--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Sakshi.👩‍💻</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="notification.css" />
-    <!-- botstrap link  -->
+    <!-- <link rel="stylesheet" href="navigation.css" /> -->
+    <!-- **botstrap link**  -->
     <!-- Latest compiled and minified CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -39,8 +40,37 @@
     />
   </head>
   <body style="background-color: black">
+    <div class="entire-container">
     <!-- -------------------------------------------- -->
-   <div class="entire-container">
+    <!-- **navbar** -->
+<div>
+  <div class="nav-root view-on">
+  <div class="navbar-top theme-dark" style="transform: translateX(0px);">
+      
+  </div>
+  <div class="navbar-core fa-4x"><i class="fa-solid fa-plus"></i></div>
+  <div class="navbar-right theme-dark" style="transform:translateY(0px);">
+    <div></div>
+    <div class="navbar-page-elem-wrapper">
+      <div class="navbar-open-icon tooltip">
+        <span>home</span>
+  <a href="#hero">
+    <!-- enter icon(similar 3) -->
+    <i class="fa-brands fa-ethereum"></i>
+  </a>
+</div>
+<div class="navbar-open-icon tooltip">
+  <span class="tooltiptext-left theme-dark">Portfolio</span>
+  <a class="">
+          <!-- enter icon(similar 3) -->
+        </a>
+      </div>
+      <div class="navbar-open-icon tooltip"></div>
+    </div>
+  </div>
+  </div>
+</div>
+    <!-- -------------------------------------------- -->
     <div class="hero theme-dark">
       <div class="hero-title">
         <div class="type-writer mb-3">
@@ -65,7 +95,7 @@
     </div>
 
     <!-- -------------------------------------------- -->
-    <div class=" container info-content">
+    <div class="  info-content">
       <div class="portfolio-root container">
         <div class="portfolio-elem-1 ps portfolio-elem-wrapper ">
           <div class="portfolio-elem theme-dark">
